--- a/src/components/bussines/Favorites/Favorites.css
+++ b/src/components/bussines/Favorites/Favorites.css
@@ -30,3 +30,11 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.noPokemons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
